fix(user): prevent SSH key overflow and password inputs red boxes

--- a/src/index.scss
+++ b/src/index.scss
@@ -158,6 +158,11 @@ $select-input-height: 40px; // Bootstrap input height
 
 // GENERAL STYLES ==============================================================
 
+// Remove red box on required inputs in Firefox
+input:required {
+  box-shadow: none;
+}
+
 .tag-ip {
   margin-left: 1em;
 }
